--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -163,6 +163,6 @@ footer {
     --bg-url: url(./assets/bg-pc.jpg);
   }
   .light {
-    --bg-url: url(./assets/bg-pcl);
+    --bg-url: url(./assets/bg-pcl.jpg);
   }
 }
