--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -29,6 +29,7 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+  height: 100vh;
 
   /*atalho para usar tudo em uma linha
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;*/
